# pipeline-optimization

./: BENCHMARK_COMPARISON.md  CANDIDATE_INSTRUCTIONS.md  INTERVIEWER_README.md  README.md  README_COMPARISON.md  example_solution.py  pyproject.toml  ruff_defaults.toml  run_comparison.sh
benchmark_orchestrators/: async_optimized.py  base_orchestrator.py  inefficient_orchestrator.py  memory_optimized.py  optimized_orchestrator.py  optimized_orchestrator_simple.py  threaded_orchestrator.py  throughput_optimized.py
src/pipeline_optimization/: main.py  orchestrator.py
src/pipeline_optimization/benchmarks/: __init__.py  benchmarker.py  metrics.py
src/pipeline_optimization/cli/: __init__.py  compare_benchmarks.py  run_benchmark.py
src/pipeline_optimization/resources/: test_cases.json
src/pipeline_optimization/tasks/: filter_input_task.py  find_anagrams_task.py  get_words_task.py  permutations_task.py  task_decorator.py  timer_decorator.py
src/pipeline_optimization/tests/: __init__.py  test_orchestrator.py
